--- a/workspace/assignments/07-backend-optimization/01-bal-g2o/bal-jacobian.ipynb
+++ b/workspace/assignments/07-backend-optimization/01-bal-g2o/bal-jacobian.ipynb
@@ -516,7 +516,7 @@
     "    for c, e in sorted(variables, key=lambda x: f'{x[0]}{x[1]}'):\n",
     "        print(f'double P_{c}_{e} = pow({c}, {e});')\n",
     "    # b. Jacobian:\n",
-    "    print(f'\\nEigen::Matrix<double, {M}, {N}> J;\\n')\n",
+    "    print(f'\\nEigen::Matrix<double, {M}, {N}> {variable};\\n')\n",
     "    for assignment in assignments:\n",
     "        print(assignment)\n",
     "    \n",
@@ -540,7 +540,7 @@
       "double P_Z_5 = pow(Z, 5);\n",
       "double P_Z_6 = pow(Z, 6);\n",
       "\n",
-      "Eigen::Matrix<double, 2, 3> J;\n",
+      "Eigen::Matrix<double, 2, 3> JP;\n",
       "\n",
       "JP(0, 0) = -f*(2*P_X_2*(P_Z_2*k1 + 2*k2*(P_X_2 + P_Y_2)) + P_Z_4 + (P_X_2 + P_Y_2)*(P_Z_2*k1 + k2*(P_X_2 + P_Y_2)))/P_Z_5;\n",
       "JP(0, 1) = -2*P_X*P_Y*f*(P_Z_2*k1 + 2*k2*(P_X_2 + P_Y_2))/P_Z_5;\n",
@@ -573,7 +573,7 @@
       "double P_Z_4 = pow(Z, 4);\n",
       "double P_Z_5 = pow(Z, 5);\n",
       "\n",
-      "Eigen::Matrix<double, 2, 3> J;\n",
+      "Eigen::Matrix<double, 2, 3> JI;\n",
       "\n",
       "JI(0, 0) = -P_X*(P_Z_4 + (P_X_2 + P_Y_2)*(P_Z_2*k1 + k2*(P_X_2 + P_Y_2)))/P_Z_5;\n",
       "JI(0, 1) = -P_X*f*(P_X_2 + P_Y_2)/P_Z_3;\n",
@@ -606,7 +606,7 @@
       "double P_Z_5 = pow(Z, 5);\n",
       "double P_Z_6 = pow(Z, 6);\n",
       "\n",
-      "Eigen::Matrix<double, 2, 6> J;\n",
+      "Eigen::Matrix<double, 2, 6> _jacobianOplusXi;\n",
       "\n",
       "_jacobianOplusXi(0, 0) = -f*(2*P_X_2*(P_Z_2*k1 + 2*k2*(P_X_2 + P_Y_2)) + P_Z_4 + (P_X_2 + P_Y_2)*(P_Z_2*k1 + k2*(P_X_2 + P_Y_2)))/P_Z_5;\n",
       "_jacobianOplusXi(0, 1) = -2*P_X*P_Y*f*(P_Z_2*k1 + 2*k2*(P_X_2 + P_Y_2))/P_Z_5;\n",
