--- a/workspace/assignments/07-backend-optimization/02-direct-ba/direct-ba-jacobian.ipynb
+++ b/workspace/assignments/07-backend-optimization/02-direct-ba/direct-ba-jacobian.ipynb
@@ -133,6 +133,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Jacobian of inverse depth parameterization\n",
+    "from sympy import sin, cos\n",
+    "\n",
+    "t, f, r = symbols('t f r')\n",
+    "\n",
+    "X_f = 1/r*cos(t)*sin(f)\n",
+    "Y_f = 1/r*sin(t)*sin(f)\n",
+    "Z_f = 1/r*cos(f)\n",
+    "\n",
+    "J_inverse_depth = Matrix(\n",
+    "    [\n",
+    "        [diff(X_f, t), diff(X_f, f), diff(X_f, r)],\n",
+    "        [diff(Y_f, t), diff(Y_f, f), diff(Y_f, r)],\n",
+    "        [diff(Z_f, t), diff(Z_f, f), diff(Z_f, r)]\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# overall Jacobians:\n",
     "\n",
     "# a. Jacobian for landmark position:\n",
@@ -140,7 +164,9 @@
     "# b. Jacobian for camera intrinsics:\n",
     "J_intrinsic = simplify(JI)\n",
     "# c. Jacobian for camera pose:\n",
-    "J_pose = simplify(JP * TP)"
+    "J_pose = simplify(JP * TP)\n",
+    "# d. parameterization:\n",
+    "J_parameterization = simplify(J_inverse_depth)"
    ]
   },
   {
@@ -152,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +208,7 @@
        "⎣            P_Z   ⎦"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +238,7 @@
        "⎣     P_Z      ⎦"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +272,7 @@
        "⎣            P_Z         P_Z             P_Z               ⎦"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,6 +280,43 @@
    "source": [
     "# display Jacobian for landmark position:\n",
     "J_pose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}- \\frac{\\sin{\\left(f \\right)} \\sin{\\left(t \\right)}}{r} & \\frac{\\cos{\\left(f \\right)} \\cos{\\left(t \\right)}}{r} & - \\frac{\\sin{\\left(f \\right)} \\cos{\\left(t \\right)}}{r^{2}}\\\\\\frac{\\sin{\\left(f \\right)} \\cos{\\left(t \\right)}}{r} & \\frac{\\sin{\\left(t \\right)} \\cos{\\left(f \\right)}}{r} & - \\frac{\\sin{\\left(f \\right)} \\sin{\\left(t \\right)}}{r^{2}}\\\\0 & - \\frac{\\sin{\\left(f \\right)}}{r} & - \\frac{\\cos{\\left(f \\right)}}{r^{2}}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡-sin(f)⋅sin(t)   cos(f)⋅cos(t)  -sin(f)⋅cos(t) ⎤\n",
+       "⎢───────────────  ─────────────  ───────────────⎥\n",
+       "⎢       r               r                2      ⎥\n",
+       "⎢                                       r       ⎥\n",
+       "⎢                                               ⎥\n",
+       "⎢ sin(f)⋅cos(t)   sin(t)⋅cos(f)  -sin(f)⋅sin(t) ⎥\n",
+       "⎢ ─────────────   ─────────────  ───────────────⎥\n",
+       "⎢       r               r                2      ⎥\n",
+       "⎢                                       r       ⎥\n",
+       "⎢                                               ⎥\n",
+       "⎢                   -sin(f)         -cos(f)     ⎥\n",
+       "⎢       0           ────────        ────────    ⎥\n",
+       "⎢                      r                2       ⎥\n",
+       "⎣                                      r        ⎦"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# display Jacobian for inverse depth parameterization:\n",
+    "J_parameterization"
    ]
   },
   {
@@ -265,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -411,6 +474,43 @@
     "# show jacobian for camera pose:\n",
     "format_jacobian_as_cpp_eigen(J_pose, '_jacobianOplusXi', 0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "// this is the analytic Jacobian expression generated by SymPy\n",
+      "\n",
+      "Eigen::Matrix<double, 3, 3> J;\n",
+      "\n",
+      "J(0, 0) = -sin(f)*sin(t)/r;\n",
+      "J(0, 1) = cos(f)*cos(t)/r;\n",
+      "J(0, 2) = -sin(f)*cos(t)/r**2;\n",
+      "J(1, 0) = sin(f)*cos(t)/r;\n",
+      "J(1, 1) = sin(t)*cos(f)/r;\n",
+      "J(1, 2) = -sin(f)*sin(t)/r**2;\n",
+      "J(2, 0) = 0;\n",
+      "J(2, 1) = -sin(f)/r;\n",
+      "J(2, 2) = -cos(f)/r**2;\n"
+     ]
+    }
+   ],
+   "source": [
+    "# show jacobian for inverse depth parameterization:\n",
+    "format_jacobian_as_cpp_eigen(J_parameterization, 'J', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
